# tgbot-mcp

./: LICENSE  README.md  pyproject.toml
src/telegrambot_mcp/: __init__.py  server.py
src/tgbot_mcp/: __init__.py
