[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tgbot-mcp"
version = "0.1.1"
description = "A trusted, open-source Telegram MCP server — bot token auth only, no personal account access"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "telegram", "bot", "llm", "automation", "notification", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/TGLEEEE/tgbot-mcp"
Repository = "https://github.com/TGLEEEE/tgbot-mcp"
Issues = "https://github.com/TGLEEEE/tgbot-mcp/issues"
Changelog = "https://github.com/TGLEEEE/tgbot-mcp/releases"

[project.scripts]
tgbot-mcp = "tgbot_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tgbot_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
